poke/testsuite/poke.pkl/try-until-diag-1.pk
/* { dg-do compile } */

defvar x = 10;

try x = 20;
until "foo";  /* { dg-error "invalid exception" } */
